@@ -240,6 +240,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26585: Eliminate http.server._quote_html() and use
+  html.escape(quote=False).  Patch by Xiang Zhang.
+
 - Issue #26685: Raise OSError if closing a socket fails.
 
 - Issue #16329: Add .webm to mimetypes.types_map.  Patch by Giampaolo Rodola'.
